--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Avia Masters — официальный crash-слот BGaming | Crash игра самолет онлайн</title>
 <meta name="description" content="Avia Masters — динамичная crash-игра от BGaming. Играйте онлайн, следите за полётом самолёта и выигрывайте реальные деньги.">
-<link rel="canonical" href="https://example-domain.ru/aviamasters">
+<link rel="canonical" href="https://aviamaterson.vercel.app/aviamasters">
 <link rel="icon" href="images/favicon.png" type="image/png">
 
 <!-- Schema FAQ + Game + Breadcrumb -->
@@ -37,8 +37,8 @@
  "@context":"https://schema.org",
  "@type":"BreadcrumbList",
  "itemListElement":[
-  {"@type":"ListItem","position":1,"name":"Главная","item":"https://example-domain.ru/"},
-  {"@type":"ListItem","position":2,"name":"Avia Masters","item":"https://example-domain.ru/aviamasters"}
+  {"@type":"ListItem","position":1,"name":"Главная","item":"https://aviamaterson.vercel.app/"},
+  {"@type":"ListItem","position":2,"name":"Avia Masters","item":"https://aviamaterson.vercel.app/aviamasters"}
  ]
 }
 </script>
@@ -238,8 +238,8 @@ img.lazy{
 <button class="play-btn" onclick="location.href='#'">Играть сейчас</button>
 
 <div class="live-stats">
-<div class="stat">✈️ Сейчас в полёте<br><strong>254</strong> пилотов</div>
-<div class="stat">🔥 Макс. множитель<br><strong>x200</strong></div>
+<div class="stat">✈️ Сейчас в полёте<br><strong>954</strong> пилота</div>
+<div class="stat">🔥 Макс. множитель<br><strong>x250</strong></div>
 </div>
 </header>
 
