--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Avia Masters — официальный crash-слот BGaming | Crash игра самолет онлайн</title>
+<title>Avia Masters — Play Online</title>
 <meta name="description" content="Avia Masters — динамичная crash-игра от BGaming. Играйте онлайн, следите за полётом самолёта и выигрывайте реальные деньги.">
 <link rel="canonical" href="https://aviamaterson.vercel.app/aviamasters">
 <link rel="icon" href="images/favicon.png" type="image/png">
@@ -306,3 +306,4 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
 </body>
 </html>
+
