--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Avia Masters — Play Online</title>
-<meta name="description" content="Avia Masters — динамичная crash-игра от BGaming. Играйте онлайн, следите за полётом самолёта и выигрывайте реальные деньги.">
-<link rel="canonical" href="https://aviamaterson.vercel.app/aviamasters">
+<title>Aviamasters — Play Online</title>
+<meta name="description" content="Aviamasters — динамичная crash-игра от BGaming. Играйте онлайн, следите за полётом самолёта и выигрывайте реальные деньги.">
+<link rel="canonical" href="https://aviamasters-crash.vercel.app/aviamasters">
 <link rel="icon" href="images/favicon.png" type="image/png">
 
 <!-- Schema FAQ + Game + Breadcrumb -->
@@ -13,7 +13,7 @@
 {
   "@context":"https://schema.org",
   "@type":"Game",
-  "name":"Avia Masters",
+  "name":"Aviamasters",
   "author":{"@type":"Organization","name":"BGaming"},
   "applicationCategory":"GameApplication",
   "genre":"Crash Game",
@@ -25,10 +25,10 @@
  "@context":"https://schema.org",
  "@type":"FAQPage",
  "mainEntity":[
-  {"@type":"Question","name":"Что такое Avia Masters?","acceptedAnswer":{"@type":"Answer","text":"Avia Masters — динамичная crash-игра от BGaming с растущим множителем во время полёта самолёта."}},
+  {"@type":"Question","name":"Что такое Aviamasters?","acceptedAnswer":{"@type":"Answer","text":"Aviamasters — динамичная crash-игра от BGaming с растущим множителем во время полёта самолёта."}},
   {"@type":"Question","name":"Можно ли играть с мобильного?","acceptedAnswer":{"@type":"Answer","text":"Да, игра полностью адаптирована под мобильные устройства."}},
   {"@type":"Question","name":"Можно ли выиграть реальные деньги?","acceptedAnswer":{"@type":"Answer","text":"Да, ставки и выигрыши происходят в реальном времени."}},
-  {"@type":"Question","name":"Как играть в Avia Masters?","acceptedAnswer":{"@type":"Answer","text":"Выберите сумму ставки, запустите полёт самолёта и заберите выигрыш до его завершения."}}
+  {"@type":"Question","name":"Как играть в Aviamasters?","acceptedAnswer":{"@type":"Answer","text":"Выберите сумму ставки, запустите полёт самолёта и заберите выигрыш до его завершения."}}
  ]
 }
 </script>
@@ -37,13 +37,14 @@
  "@context":"https://schema.org",
  "@type":"BreadcrumbList",
  "itemListElement":[
-  {"@type":"ListItem","position":1,"name":"Главная","item":"https://aviamaterson.vercel.app/"},
-  {"@type":"ListItem","position":2,"name":"Avia Masters","item":"https://aviamaterson.vercel.app/aviamasters"}
+  {"@type":"ListItem","position":1,"name":"Главная","item":"https://aviamasters-crash.vercel.app/"},
+  {"@type":"ListItem","position":2,"name":"Aviamasters","item":"https://aviamasters-crash.vercel.app/aviamasters"}
  ]
 }
 </script>
 
 <style>
+/* --- Стили сохранены с предыдущей версии --- */
 body{
   margin:0;
   padding:0;
@@ -233,9 +234,9 @@ img.lazy{
 <div class="container">
 
 <header class="hero">
-<h1>Avia Masters</h1>
+<h1>Aviamasters</h1>
 <span class="subtitle">Официальная crash-игра от BGaming</span>
-<button class="play-btn" onclick="location.href='#'">Играть сейчас</button>
+<button class="play-btn" onclick="location.href='https://1wndbwg.life/v3/5267/fortune-wheel-aviamasters/?sub1=avia'">Играть сейчас</button>
 
 <div class="live-stats">
 <div class="stat">✈️ Сейчас в полёте<br><strong>954</strong> пилота</div>
@@ -244,13 +245,13 @@ img.lazy{
 </header>
 
 <section class="section" id="about">
-<h2>Что такое Avia Masters</h2>
-<p>Avia Masters — динамичная crash-игра от BGaming с растущим множителем во время полёта самолёта. Игра сочетает азарт, стратегию и мгновенные решения, позволяя выигрывать реальные деньги.</p>
+<h2>Что такое Aviamasters</h2>
+<p>Aviamasters — динамичная crash-игра от BGaming с растущим множителем во время полёта самолёта. Игра сочетает азарт, стратегию и мгновенные решения, позволяя выигрывать реальные деньги.</p>
 <a class="small-btn" href="#how-to-play">Узнайте как играть</a>
 </section>
 
 <section class="section" id="how-to-play">
-<h2>Как играть в Avia Masters</h2>
+<h2>Как играть в Aviamasters</h2>
 <h3>Шаг 1: Выберите ставку</h3>
 <p>Выберите сумму ставки и подготовьтесь к запуску полёта самолёта.</p>
 <h3>Шаг 2: Запустите полёт</h3>
