--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ img.lazy{
 <header class="hero">
 <h1>Aviamasters</h1>
 <span class="subtitle">Официальная crash-игра от BGaming</span>
-<button class="play-btn" onclick="location.href='https://1wndbwg.life/v3/5267/fortune-wheel-aviamasters/?sub1=avia'">Играть сейчас</button>
+<button class="play-btn" onclick="location.href='https://lkxa.pro/0ed7'">Играть сейчас</button>
 
 <div class="live-stats">
 <div class="stat">✈️ Сейчас в полёте<br><strong>954</strong> пилота</div>
@@ -322,3 +322,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
