--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Aviamasters — Play Online</title>
 <meta name="description" content="Aviamasters — динамичная crash-игра от BGaming. Играйте онлайн, следите за полётом самолёта и выигрывайте реальные деньги.">
-<link rel="canonical" href="https://aviamasters-crash.vercel.app/aviamasters">
+<link rel="canonical" href="https://aviamasters-crash.vercel.app/">
 <link rel="icon" href="images/favicon.png" type="image/png">
 
 <!-- Schema FAQ + Game + Breadcrumb -->
@@ -322,4 +322,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
